--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,7 +3,7 @@ version: "3"
 tasks:
   docs:
     cmds:
-      - swag i -d ./cmd/http,./internal/collection,./internal/gallery,./internal/domain,./internal/qr --parseDependency --parseInternal
+      - swag i -d ./cmd/http,./app/collections,./app/galleries,./app/domain --parseDependency --parseInternal
   grun:
     cmds:
       - go run ./cmd/http/main.go
