switched to cmd app startup, implemented api cmd

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,10 +4,10 @@ tasks:
   docs:
     cmds:
       - swag i -d ./cmd/http,./internal/api --parseDependency --parseInternal
-  grun:
+  api:
     cmds:
-      - go run ./cmd/http/main.go
-  rrun:
+      - go run ./cmd/halftone/main.go api
+  client:
     dir: "web"
     cmds:
       - npm run dev
