--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,7 +3,7 @@ version: "3"
 tasks:
   docs:
     cmds:
-      - swag i -d ./cmd/http,./internal/api --parseDependency --parseInternal
+      - swag i -d ./cmd/halftone,./internal/api --parseDependency --parseInternal
   api:
     cmds:
       - go run ./cmd/halftone/main.go api
