--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,11 +1,16 @@
 # TODO
 services:
-  api:
-  scheduler:
-  worker:
+#  api:
+#  scheduler:
+#  worker:
   mongo:
+    image: mongodb/mongodb-community-server:latest
+    container_name: mongodb
+    ports:
+      - "27017:27017"
   redis:
     image: redis/redis-stack:latest
+    container_name: redis
     environment:
       REDIS_ARGS: ""
     ports:
