partial aws infrastructure (S3, Cognito)

--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 #      - api-secrets
 #  scheduler:
   client:
-    image: halftone-client
+    image: halftone-client:latest
     build: ./web
     container_name: halftone-client
     ports:
