--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   AWS_REGION: eu-north-1
-  ENVIRONMENT: production
+  ENVIRONMENT: prod
   ECR_FRONTEND_REPOSITORY_NAME: halftone-client
   ECR_BACKEND_REPOSITORY_NAME: halftone-api
 
