--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,11 +74,12 @@ jobs:
       - name: Get Terraform Outputs
         id: terraform-output
         run: |
-          echo "application_url=$(terraform output -raw application_urls | jq -r '.client')" >> $GITHUB_OUTPUT
+          echo "application_url=$(terraform output -json application_urls | jq -r '.client')" >> $GITHUB_OUTPUT
           echo "codedeploy_app_name=$(terraform output -raw codedeploy_app_name)" >> $GITHUB_OUTPUT
           echo "codedeploy_deployment_group=$(terraform output -raw codedeploy_deployment_group_name)" >> $GITHUB_OUTPUT
           echo "ecs_cluster_name=$(terraform output -raw ecs_cluster_name)" >> $GITHUB_OUTPUT
           echo "task_definition_family=$(terraform output -raw task_definition_family)" >> $GITHUB_OUTPUT
+
   deploy-backend:
     needs: [changes, deploy-infrastructure]
     if: always() && (needs.changes.outputs.backend == 'true' || needs.changes.outputs.infrastructure == 'true')
