--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,6 +62,8 @@ jobs:
         env:
           TF_VAR_docdb_master_username: ${{ secrets.DOCDB_MASTER_USERNAME }}
           TF_VAR_docdb_master_password: ${{ secrets.DOCDB_MASTER_PASSWORD }}
+          TF_VAR_fcm_project_id: ${{ secrets.FCM_PROJECT_ID }}
+          TF_VAR_google_application_credentials: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
 
       - name: Get Terraform Outputs
         id: terraform-output
