--- a/application/client/package.json
+++ b/application/client/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.1",
+    "firebase": "^11.9.0",
     "lucide-react": "^0.453.0",
     "oidc-client-ts": "^3.2.0",
     "react": "^18.3.1",
