json credentials fix

--- a/application/backend/Dockerfile
+++ b/application/backend/Dockerfile
@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:1
 FROM golang:1.24.1-bookworm AS build
 
 WORKDIR /app
@@ -11,14 +12,15 @@ COPY . .
 
 RUN CGO_ENABLED=0 GOOS=linux go build -o /app/halftone ./cmd/halftone
 
+RUN --mount=type=secret,id=firebase_service_account,target=/tmp/firebase-service-account.json \
+    cp /tmp/firebase-service-account.json /app/firebase-service-account.json
+
 FROM gcr.io/distroless/static-debian12:latest
 
 WORKDIR /app
 
 COPY --from=build /app/halftone /app/halftone
-
-RUN --mount=type=secret,id=firebase_service_account,target=/tmp/firebase-service-account.json \
-    cp /tmp/firebase-service-account.json /app/firebase-service-account.json
+COPY --from=build /app/firebase-service-account.json /app/firebase-service-account.json
 
 EXPOSE 8080
 
