--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,7 +74,7 @@ jobs:
 
   deploy-backend:
     needs: [ changes, deploy-infrastructure ]
-    #if: needs.changes.outputs.backend == 'true'
+    if: needs.changes.outputs.backend == 'true'
     runs-on: ubuntu-latest
     environment: production
     defaults:
@@ -193,7 +193,7 @@ jobs:
 
   deploy-frontend:
     needs: [changes, deploy-infrastructure]
-    #if: needs.changes.outputs.frontend == 'true'
+    if: needs.changes.outputs.frontend == 'true'
     runs-on: ubuntu-latest
     environment: production
     defaults:
